; ModuleID = '/home/carl/AnghaBench/libgit2/tests/win32/extr_forbidden.c_test_win32_forbidden__can_diff_index_to_workdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/win32/extr_forbidden.c_test_win32_forbidden__can_diff_index_to_workdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@repo = common dso_local global i32 0, align 4
@GIT_DELTA_DELETED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_win32_forbidden__can_diff_index_to_workdir() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = load i32, i32* @repo, align 4
  %7 = call i32 @git_repository_index(i32** %1, i32 %6)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @repo, align 4
  %10 = call i32 @git_repository_head_tree(i32** %4, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @repo, align 4
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_diff_index_to_workdir(i32** %2, i32 %12, i32* %13, i32* null)
  %15 = call i32 @cl_git_pass(i32 %14)
  store i64 0, i64* %5, align 8
  br label %16

16:                                               ; preds = %30, %0
  %17 = load i64, i64* %5, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = call i64 @git_diff_num_deltas(i32* %18)
  %20 = icmp ult i64 %17, %19
  br i1 %20, label %21, label %33

21:                                               ; preds = %16
  %22 = load i32*, i32** %2, align 8
  %23 = load i64, i64* %5, align 8
  %24 = call %struct.TYPE_3__* @git_diff_get_delta(i32* %22, i64 %23)
  store %struct.TYPE_3__* %24, %struct.TYPE_3__** %3, align 8
  %25 = load i32, i32* @GIT_DELTA_DELETED, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @cl_assert_equal_i(i32 %25, i32 %28)
  br label %30

30:                                               ; preds = %21
  %31 = load i64, i64* %5, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %5, align 8
  br label %16

33:                                               ; preds = %16
  %34 = load i32*, i32** %2, align 8
  %35 = call i32 @git_diff_free(i32* %34)
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @git_tree_free(i32* %36)
  %38 = load i32*, i32** %1, align 8
  %39 = call i32 @git_index_free(i32* %38)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @git_repository_head_tree(i32**, i32) #1

declare dso_local i32 @git_diff_index_to_workdir(i32**, i32, i32*, i32*) #1

declare dso_local i64 @git_diff_num_deltas(i32*) #1

declare dso_local %struct.TYPE_3__* @git_diff_get_delta(i32*, i64) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_diff_free(i32*) #1

declare dso_local i32 @git_tree_free(i32*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
